--- a/ez_plant/templates/index.html
+++ b/ez_plant/templates/index.html
@@ -1,111 +1,50 @@
-<html ng-app="ngMailChimp">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>PlantEZ signup</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/animations.css') }}"/>
-    </head>
-    <body ng-controller="SignUpController as ctrl">
-        <div class="signup-wrapper">
-            <h1> <div class="logo">
-                <img src="{{ url_for('static', filename='assets/images/logo.png') }}" alt="Logo"/>
-            </div></h1>
-			<div class="alert alert-success message-animation" role="alert" ng-if="ctrl.showSubmittedPrompt">
-                Thank you! Your account has been created.
+<!-- index.html -->
+<!DOCTYPE html>
+<html ng-app="ez_plant">
+<head>
+  <!-- load bootstrap and fontawesome via CDN -->
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
+
+  <!-- SPELLS -->
+  <!-- load angular and angular route via CDN -->
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-route.js"></script>
+  <script src="{{ url_for('static', filename='js/app.js')}}"></script>
+  <script src="{{ url_for('static', filename='js/aboutController.js')}}"></script>
+  <script src="{{ url_for('static', filename='js/loginController.js')}}"></script>
+
+</head>
+
+<!-- define angular controller -->
+<body ng-controller="mainController">
+    <!-- HEADER AND NAVBAR -->
+    <header>
+        <nav class="navbar navbar-default">
+        <div class="container">
+            <div class="navbar-header">
+                <div class="navbar-brand">
+                </div>
+                  <img class="navbar-brand" src="{{ url_for('static', filename='assets/images/plant.png')}}"/>
+                  <!-- <a class="navbar-brand" href="#">EZ-Plant</a> -->
             </div>
-            <form name="ctrl.signupForm" ng-submit="ctrl.signup()" novalidate>
-                <div class="form-group" ng-class="{'has-error':ctrl.hasErrorClass('email')}">
-                    <label for="email">Email</label>
-                    <input id="email" name="email" class="form-control" type="email" required
-                           ng-model="ctrl.newCustomer.email" ng-model-options="{ updateOn : 'default blur' }"
-                           ng-focus="ctrl.toggleEmailPrompt(true)" ng-blur="ctrl.toggleEmailPrompt(false)"/>
 
-
-                    <div class="my-messages">
-                        <div class="prompt message-animation" ng-if="ctrl.showEmailPrompt">
-                            What's your email address?
-                        </div>
-                    </div>
-
-                    <div class="my-messages" ng-messages="ctrl.signupForm.email.$error" ng-if="ctrl.showMessages('email')">
-                        <div class="message-animation" ng-message="required">
-                            <strong>This field is required.</strong>
-                        </div>
-                        <div class="message-animation" ng-message="email">
-                            <strong>Please format your email correctly.</strong>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="form-group" ng-class="{'has-error':ctrl.hasErrorClass('userName')}">
-                    <label for="userName">Username</label>
-                    <input id="userName" name="userName" class="form-control" type="text" required
-                           ng-model="ctrl.newCustomer.userName" ng-model-options="{ updateOn : 'default blur' }"
-                           ng-focus="ctrl.toggleUsernamePrompt(true)" ng-blur="ctrl.toggleUsernamePrompt(false)"/>
-
-                    <div class="my-messages">
-                        <div class="prompt message-animation" ng-if="ctrl.showUsernamePrompt">
-                            Choose a username that contains only letters and numbers, or use your email address.
-                        </div>
-                    </div>
-
-                    <div class="my-messages" ng-messages="ctrl.signupForm.userName.$error" ng-if="ctrl.showMessages('userName')">
-                        <div class="message-animation" ng-message="required">
-                            <strong>This field is required.</strong>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-
-                    {% raw %}
-                    <div class="input-group" ng-class="{'has-error':ctrl.hasErrorClass('password')}">
-                        <input id="password" name="password" class="form-control" required
-                               type="{{ctrl.getPasswordType()}}"
-                               ng-model-options="{ updateOn : 'default blur' }"
-                               ng-model="ctrl.newCustomer.password"
-                               validate-password-characters/>
-                        <span class="input-group-addon">
-                            <input type="checkbox" ng-model="ctrl.signupForm.showPassword"> Show
-                        </span>
-                    </div>
-                    {% endraw %}
-
-                    <div class="my-messages" ng-messages="ctrl.signupForm.password.$error" ng-if="ctrl.showMessages('password')">
-                        <div class="message-animation" ng-message="required">
-                            <strong>This field is required.</strong>
-                        </div>
-                    </div>
-
-                    <div class="password-requirements" ng-if="!ctrl.signupForm.password.$valid">
-                        <ul class="float-left">
-                            <li ng-class="{'completed':!ctrl.signupForm.password.$error.lowerCase}">One lowercase character</li>
-                            <li ng-class="{'completed':!ctrl.signupForm.password.$error.upperCase}">One uppercase character</li>
-                            <li ng-class="{'completed':!ctrl.signupForm.password.$error.number}">One number</li>
-                        </ul>
-                        <ul class="selfclear clearfix">
-                            <li ng-class="{'completed':!ctrl.signupForm.password.$error.specialCharacter}">One special character</li>
-                            <li ng-class="{'completed':!ctrl.signupForm.password.$error.eightCharacters}">Eight characters minimum</li>
-                        </ul>
-                    </div>
-
-                    <div class="alert alert-success message-animation" role="alert" ng-if="ctrl.signupForm.password.$valid">
-                        Your password is secure and you are good to go!
-                    </div>
-                </div>
-
-                <button class="btn btn-primary" type="submit">Create My Account</button>
-            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#/"><i class="fa fa-home"></i> Home</a></li>
+                <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
+            </ul>
         </div>
+        </nav>
+    </header>
 
-        <script type="text/javascript" src="{{ url_for('static', filename='vendor/angular.min.js') }}"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename='vendor/angular-aria.min.js') }}"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename='vendor/angular-messages.min.js') }}"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename='vendor/angular-animate.min.js') }}"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
-    </body>
+    <!-- MAIN CONTENT AND INJECTED VIEWS -->
+    <div id="main">
+      {% raw %}
+        {{ message }}
+      {% endraw %}
+        <!-- this is where content will be injected -->
+        <div ng-view></div>
+    </div>
+
+</body>
 </html>
