client side login process

--- a/ez_plant/templates/index.html
+++ b/ez_plant/templates/index.html
@@ -5,43 +5,45 @@
   <!-- load bootstrap and fontawesome via CDN -->
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
-
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css')}}" />
   <!-- SPELLS -->
   <!-- load angular and angular route via CDN -->
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-route.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-route.js"></script>
   <script src="{{ url_for('static', filename='js/app.js')}}"></script>
+  <script src="{{ url_for('static', filename='js/services.js')}}"></script>
   <script src="{{ url_for('static', filename='js/aboutController.js')}}"></script>
   <script src="{{ url_for('static', filename='js/loginController.js')}}"></script>
+
 
 </head>
 
 <!-- define angular controller -->
-<body ng-controller="mainController">
+<body class="body-bg" ng-controller="mainController">
     <!-- HEADER AND NAVBAR -->
     <header>
         <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <div class="navbar-brand">
-                </div>
-                  <img class="navbar-brand" src="{{ url_for('static', filename='assets/images/plant.png')}}"/>
-                  <!-- <a class="navbar-brand" href="#">EZ-Plant</a> -->
-            </div>
+          <div class="container-fluid">
+              <div class="navbar-header">
+                  <div class="navbar-brand">
+                  </div>
+                    <img class="navbar-brand" src="{{ url_for('static', filename='assets/images/plant.png')}}"/>
+                    <!-- <a class="navbar-brand" href="#">EZ-Plant</a> -->
+              </div>
 
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#/"><i class="fa fa-home"></i> Home</a></li>
-                <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
-            </ul>
-        </div>
+              <ul class="nav navbar-nav navbar-right">
+                  <li><a href="#/"><i class="fa fa-home"></i> Home</a></li>
+                  <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
+              </ul>
+          </div>
         </nav>
     </header>
 
     <!-- MAIN CONTENT AND INJECTED VIEWS -->
     <div id="main">
-      {% raw %}
+      <!-- {% raw %}
         {{ message }}
-      {% endraw %}
+      {% endraw %} -->
         <!-- this is where content will be injected -->
         <div ng-view></div>
     </div>
