--- a/ez_plant/templates/login.html
+++ b/ez_plant/templates/login.html
@@ -1,6 +1,6 @@
 <div class="col-md-6 col-md-offset-3">
     <h2>Login</h2>
-    <div class="alert alert-success message-animation" role="alert" ng-if="showError">
+    <div class="alert alert-danger message-animation" role="alert" ng-if="showError">
         Invalid username and/or password.
     </div>
     <form name="loginForm" ng-submit="login()" role="form">
