garden page with pictures

--- a/ez_plant/templates/index.html
+++ b/ez_plant/templates/index.html
@@ -17,6 +17,7 @@
   <script src="{{ url_for('static', filename='js/aboutController.js')}}"></script>
   <script src="{{ url_for('static', filename='js/loginController.js')}}"></script>
   <script src="{{ url_for('static', filename='js/registerController.js')}}"></script>
+  <script src="{{ url_for('static', filename='js/gardenController.js')}}"></script>
 
 
 </head>
