--- a/ez_plant/templates/about.html
+++ b/ez_plant/templates/about.html
@@ -16,9 +16,7 @@
 <!-- define angular controller -->
 <body ng-controller="aboutController">
     <div id="main">
-      {% raw %}
-        {{ message }}
-      {% endraw %}
+        [[ message ]]
     </div>
 </body>
 </html>
