--- a/ez_plant/static/css/garden.css
+++ b/ez_plant/static/css/garden.css
@@ -36,7 +36,6 @@
 }
 .plantsContainer {
   width: 80%;
-  height: 300px;
   margin-left: auto;
   margin-right: auto;
   border: 1px solid;
@@ -91,4 +90,26 @@
 .thumbnail img{
   width: 190px;
   height: 190px;
+}
+
+.plantDetails {
+}
+
+.arrow {
+}
+
+.arrow img{
+  vertical-align: bottom;
+  position: relative;
+}
+.formDiv {
+  margin-top: -1px;
+  height: 300px;
+  background-color: rgba(255, 255, 255, 0.93);
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  radius: 4px;
+  border-radius: 18px;
+  border: 1px solid #ddd;
 }
