--- a/ez_plant/templates/index.html
+++ b/ez_plant/templates/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
   <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" /> -->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css')}}" />
-  <!-- SPELLS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>  <!-- SPELLS -->
   <!-- load angular and angular route via CDN -->
   <script src="https://use.fontawesome.com/2b4f6247e1.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
