--- a/ez_plant/static/css/garden.css
+++ b/ez_plant/static/css/garden.css
@@ -101,10 +101,11 @@
 .arrow img{
   vertical-align: bottom;
   position: relative;
+  opacity: 0.93;
 }
 .formDiv {
   margin-top: -1px;
-  height: 300px;
+  /*height: 300px;*/
   background-color: rgba(255, 255, 255, 0.93);
   width: 80%;
   margin-left: auto;
@@ -112,4 +113,8 @@
   radius: 4px;
   border-radius: 18px;
   border: 1px solid #ddd;
+}
+
+.plantFields{
+  /*width: 60%;*/
 }
