--- a/ez_plant/templates/garden.html
+++ b/ez_plant/templates/garden.html
@@ -23,7 +23,7 @@
               <h4 class="plantNameTxt marginFix">[[plant.name]]</h4>
               <p class="plantNameType marginFix">[[plant.type]]</p>
               <p class="marginFix">
-                <a title="Edit" class="btn" onclick="alert('Edited!')" role="button"> <i class="fa fa-pencil fa-lg" aria-hidden="true"></i></a>
+                <a title="Edit" class="editPlantBtn" onclick="alert('Edited!')" role="button"> <i class="fa fa-pencil fa-lg" aria-hidden="true"></i></a>
                 <!-- <a title="Delete" class="btn" onclick="alert('Deleted!')" role="button"> <i class="fa fa-trash fa-lg" aria-hidden="true"></i></a> -->
               </p>
               <p class="lastWateredTxt marginFix">Last watered: [[plant.water_data.last_watered]]</p>
@@ -46,47 +46,50 @@
     </div>
     <div class="formDiv">
       <form>
-        <div class="plantFields col-sm-offset-3">
-            <div class="form-group row">
-              <label for="nickname1" class="col-sm-3 form-control-label">Nickname</label>
-              <div class="col-sm-5">
-                <input type="text" class="form-control" id="nickname1" placeholder="Nickname">
-              </div>
-            </div>
-            <div class="form-group row">
-              <label for="type1" class="col-sm-3 form-control-label">Type</label>
-              <div class="col-sm-5">
-                <input type="text" class="form-control" id="type1" placeholder="Type">
-              </div>
-            </div>
-
-            <div class="form-group row">
-              <label class="col-sm-3">Watering Method</label>
-              <div class="col-sm-3">
-                <div class="radio">
-                  <label class="col-sm-1"><input type="radio" name="gridRadios" id="gridRadios1" value="optionScheduled" checked>Scheduled</label>
+        <div class="innerFormDiv form-group row">
+            <div class="col-sm-3 col-sm-offset-1">
+              <div class="imgContainer" for="inputId" ng-click="openDialog();">
+                <img ng-if="[[plant.img_url]]  != ''" ng-src="[[plant.img_url]]"></img>
+                <img ng-if="[[plant.img_url]]  == ''" ng-src="static/assets/images/default_plant.png"></img>
+                <div class="pencil">
+                  <i class="fa fa-pencil-square fa-lg" aria-hidden="true"></i>
                 </div>
-
               </div>
-
-              <div class="col-sm-4">
-                <div class="radio">
-                  <label class="col-sm-1"><input type="radio" name="gridRadios" id="gridRadios1" value="optionScheduled" checked>Moisture</label>
-                </div>
-
-              </div>
-
+              <input id="inputId" type="file" onchange="angular.element(this).scope().readURL(this);" style="position: fixed; top: -100em" />
             </div>
+            <div class="col-sm-7 text-left">
 
+              <div class="form-group row">
+                <label for="nickname" class="col-sm-3 form-control-label">Nickname</label>
+                <div class="col-sm-5">
+                  <input type="text" ng-model="plant.name" class="form-control" id="nickname" placeholder="Nickname">
+                </div>
+              </div>
 
-            <div class="form-group row">
-              <div class="col-sm-offset-2 col-sm-5">
-                <button type="submit" class="btn btn-secondary">Sign in</button>
+              <div class="form-group row">
+                <label for="type" class="col-sm-3 form-control-label">Type</label>
+                <div class="col-sm-5">
+                  <input type="text" class="form-control" id="type" ng-model="plant.type" placeholder="Type">
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <label  for class="col-sm-3">Watering Method</label>
+                <div class="radioiDiv col-sm-6">
+                  <div class="radio-inline">
+                    <label class="col-sm-1"><input type="radio" name="gridRadios" id="gridRadios1" value="optionScheduled" checked>Scheduled</label>
+                  </div>
+                  <div class="radio-inline">
+                      <label class="col-sm-1"><input type="radio" name="gridRadios" id="gridRadios1" value="optionMoisture">Moisture</label>
+                  </div>
               </div>
             </div>
         </div>
+      </div>
+      <div class="form-group row clearfix">
+          <button type="submit" class="btn btn-info"><i class="fa fa-pagelines" aria-hidden="true"></i> Submit Plant</button>
+      </div>
       </form>
-    </div>
     </div>
 </span>
 </body>
