--- a/ez_plant/templates/garden.html
+++ b/ez_plant/templates/garden.html
@@ -41,79 +41,100 @@
     </div>
   </div>
 
-<span class="plantDetailsWrapper">
-  <div class="plantDetails" ng-if="showForm">
-    <div class="arrow" >
-      <img src="static/assets/images/arrow.png" ng-style="{left: arrowPosLeft}"/>
-    </div>
-    <div class="formDiv">
-      <form>
-        <div class="innerFormDiv form-group row">
-            <div class="col-sm-3 col-sm-offset-1">
-              <div class="imgContainer" for="inputId" ng-click="openDialog();">
-                <img ng-if="[[plant.img_url]]  != ''" ng-src="[[plant.img_url]]"></img>
-                <img ng-if="[[plant.img_url]]  == ''" ng-src="static/assets/images/default_plant.png"></img>
-                <div class="pencil">
-                  <i class="fa fa-pencil-square fa-lg" aria-hidden="true"></i>
-                </div>
-              </div>
-              <input id="inputId" type="file" onchange="angular.element(this).scope().readURL(this);" style="position: fixed; top: -100em" />
-            </div>
-            <div class="col-sm-7 text-left">
-              <div class="form-group row">
-                <label for="nickname" class="col-sm-3 form-control-label">Nickname</label>
-                <div class="col-sm-5">
-                  <input type="text" ng-model="plant.name" class="form-control" id="nickname" placeholder="Nickname">
-                </div>
-              </div>
+  <span class="plantDetailsWrapper">
+    <div class="plantDetails" ng-if="showForm">
+      <div class="arrow" >
+        <img src="static/assets/images/arrow.png" ng-style="{left: arrowPosLeft}"/>
+      </div>
 
-              <div class="form-group row">
-                <label for="type" class="col-sm-3 form-control-label">Type</label>
-                <div class="col-sm-5">
-                  <input type="text" class="form-control" id="type" ng-model="plant.type" placeholder="Type">
-                </div>
-              </div>
+      <div class="formDiv">
+        <!-- Nav tabs -->
+        <ul class="nav nav-tabs" role="tablist">
+          <li role="presentation" class="active"><a ng-click="changeTabContent('details')" aria-controls="addplant" role="tab" data-toggle="tab">Details</a></li>
+          <li role="presentation"><a  ng-click="changeTabContent('stats')" aria-controls="statistics" role="tab" data-toggle="tab">Statistics</a></li>
+        </ul>
 
-              <div class="form-group row">
-                <label  for class="col-sm-3">Watering Method</label>
-                <div class="radioiDiv col-sm-6">
-                  <div class="radio-inline">
-                    <label class="col-sm-1">
-                      <input type="radio" name="gridRadios" value="schedule" ng-model="plant.water_data.water_mode">Scheduled
-                    </label>
+        <div class="tab-content">
+          <form role="tabpanel" class="tab-pane active" id="formTab" ng-show="content == 'details'" ng-submit="submitPlant()">
+            <div class="innerFormDiv form-group row">
+                <div class="col-sm-3 col-sm-offset-1">
+                  <div class="imgContainer" for="inputId" ng-click="openDialog();">
+                    <img ng-if="[[plant.img_url]]  != ''" ng-src="[[plant.img_url]]"></img>
+                    <img ng-if="[[plant.img_url]]  == ''" ng-src="static/assets/images/default_plant.png"></img>
+                    <div class="pencil">
+                      <i class="fa fa-pencil-square fa-lg" aria-hidden="true"></i>
+                    </div>
                   </div>
-                  <div class="radio-inline">
-                    <label class="col-sm-1">
-                      <input type="radio" name="gridRadios" value="moisture" ng-model="plant.water_data.water_mode" >Moisture
-                    </label>
+                  <input id="inputId" type="file" name="plantPhoto" onchange="angular.element(this).scope().readURL(this);" style="position: fixed; top: -100em"/>
+                </div>
+                <div class="col-sm-7 text-left">
+                  <div class="form-group row">
+                    <label for="nickname" class="col-sm-3 form-control-label">Nickname</label>
+                    <div class="col-sm-5">
+                      <input type="text" ng-model="plant.name" class="form-control" id="nickname" placeholder="Nickname">
+                    </div>
                   </div>
-              </div>
-            </div>
-            <div class="well col-sm-offset-3">
-              <div class="row" ng-show="plant.water_data.water_mode == 'schedule'">
-                <span class="water-every col-sm-3">Water every</span>
-                <input type="text" ng-model="plant.water_data.repeat_every" class="form-control col-sm-1 schedule-input"></input>
-                <span class="days-at col-sm-2">days, at</span>
-                <input type="text" ng-model="plant.water_data.hour" class="waterTime form-control col-sm-1" />
-                <!-- <input type="text" dn-timepicker="h:mm a" min-time="00:00" max-time="23:59" step="15" ng-model="plant.water_data.hour"/> -->
-                <!-- <input type="text" ng-model="plant.water_data.hour" class="form-control col-sm-3 schedule-input"></input> -->
-              </div>
 
-              <div class="row" ng-show="plant.water_data.water_mode == 'moisture'">
-                <span class="col-sm-8 text-left">Water when moisture level is below</span>
-                <span class="input-group moisture-input">
-                  <input type="text" ng-model="plant.water_data.low_threshold" class="form-control col-sm-1"></input>
-                  <span class="input-group-addon">%</span>
-                </span>
-              </div>
+                  <div class="form-group row">
+                    <label for="type" class="col-sm-3 form-control-label">Type</label>
+                    <div class="col-sm-5">
+                      <input type="text" class="form-control" id="type" ng-model="plant.type" placeholder="Type">
+                    </div>
+                  </div>
+
+                  <div class="form-group row">
+                    <label  for class="col-sm-3">Watering Method</label>
+                    <div class="radioiDiv col-sm-6">
+                      <div class="radio-inline">
+                        <label class="col-sm-1">
+                          <input type="radio" name="gridRadios" value="schedule" ng-model="plant.water_data.water_mode">Scheduled
+                        </label>
+                      </div>
+                      <div class="radio-inline">
+                        <label class="col-sm-1">
+                          <input type="radio" name="gridRadios" value="moisture" ng-model="plant.water_data.water_mode" >Moisture
+                        </label>
+                      </div>
+                  </div>
+                </div>
+                <div class="well col-sm-offset-3">
+                  <div class="row" ng-show="plant.water_data.water_mode == 'schedule'">
+                    <span class="water-every col-sm-3">Water every</span>
+                    <input id="daysInput" ng-change="calcNextWatering()" type="text" ng-model="plant.water_data.repeat_every" class="form-control col-sm-1 schedule-input"></input>
+                    <span class="days-at col-sm-2">days, at</span>
+                    <input id="hourInput" type="text" ng-model="plant.water_data.hour" ng-change="calcNextWatering()" class="waterTime schedule-input form-control col-sm-1" />
+                    <!-- <input type="text" dn-timepicker="h:mm a" min-time="00:00" max-time="23:59" step="15" ng-model="plant.water_data.hour"/> -->
+                    <!-- <input type="text" ng-model="plant.water_data.hour" class="form-control col-sm-3 schedule-input"></input> -->
+                  </div>
+                  <div  ng-show="plant.water_data.water_mode == 'schedule'" class="row nextWatering">Next watering time:
+                    <input type="hidden" name="nextWatering" ng-model="plant.water_data.next_watering">
+                    <span>[[plant.water_data.next_watering | date: 'dd.MM.y HH:mm']]</span>
+                  </div>
+
+                  <div class="row" ng-show="plant.water_data.water_mode == 'moisture'">
+                    <span class="col-sm-8  col-lg-8 text-left">Water when moisture level is below</span>
+                    <span class="input-group moisture-input">
+                      <input type="text" ng-model="plant.water_data.low_threshold" class="form-control col-sm-1 col-lg-1"></input>
+                      <span class="input-group-addon">%</span>
+                    </span>
+                  </div>
+                </div>
             </div>
+          </div>
+          <div class="form-group row clearfix">
+              <button type="submit" class="btn btn-info"><i class="fa fa-envira" aria-hidden="true"></i> Submit Plant</button>
+          </div>
+          </form>
+
+          <div role="tabpanel" id="statsTab" ng-show="content == 'stats'">
+            stats!!!
+          </div>
         </div>
       </div>
-      <div class="form-group row clearfix">
-          <button type="submit" class="btn btn-info"><i class="fa fa-envira" aria-hidden="true"></i> Submit Plant</button>
-      </div>
-      </form>
     </div>
-</span>
+  </span>
+  <div style ="width: 80%; margin-left: auto; margin-right: auto; margin-top: 10px;" class="alert alert-success message-animation" role="alert" ng-if="success == true">
+    Plant was successfuly submitted!
+  </div>
 </body>
 </html>
