--- a/ez_plant/templates/garden.html
+++ b/ez_plant/templates/garden.html
@@ -126,8 +126,8 @@
           </div>
           </form>
 
-          <div role="tabpanel" id="statsTab" ng-show="content == 'stats'">
-            stats!!!
+          <div  style ="text-align: center;" role="tabpanel" id="statsTab" ng-show="content == 'stats'">
+            <img src="static/assets/images/stats.png"/>
           </div>
         </div>
       </div>
