--- a/ez_plant/templates/index.html
+++ b/ez_plant/templates/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="{{ url_for('static', filename='assets/images/favicon.ico') }}"/>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
   <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" /> -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css')}}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css')}}" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>  <!-- SPELLS -->
   <!-- load angular and angular route via CDN -->
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -36,7 +36,7 @@
               <div class="navbar-header">
                   <div class="navbar-brand">
                   </div>
-                    <img class="navbar-brand" src="{{ url_for('static', filename='assets/images/plant.png')}}"/>
+                    <img class="navbar-brand logo" src="{{ url_for('static', filename='assets/images/logo.png')}}"/>
               </div>
 
               <ul class="nav navbar-nav navbar-right">
