send plant form with all fields

--- a/ez_plant/templates/garden.html
+++ b/ez_plant/templates/garden.html
@@ -86,12 +86,12 @@
                     <div class="radioiDiv col-sm-6">
                       <div class="radio-inline">
                         <label class="col-sm-1">
-                          <input type="radio" name="gridRadios" value="schedule" ng-model="plant.water_data.water_mode">Scheduled
+                          <input type="radio" name="waterMethod" value="schedule" ng-model="plant.water_data.water_mode">Scheduled
                         </label>
                       </div>
                       <div class="radio-inline">
                         <label class="col-sm-1">
-                          <input type="radio" name="gridRadios" value="moisture" ng-model="plant.water_data.water_mode" >Moisture
+                          <input type="radio" name="waterMethod" value="moisture" ng-model="plant.water_data.water_mode" >Moisture
                         </label>
                       </div>
                   </div>
