--- a/ez_plant/templates/garden.html
+++ b/ez_plant/templates/garden.html
@@ -59,8 +59,8 @@
       <div class="formDiv">
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
-          <li role="presentation" class="active"><a ng-click="changeTabContent('details')" aria-controls="addplant" role="tab" data-toggle="tab">Details</a></li>
-          <li role="presentation"><a  ng-click="changeTabContent('stats')" aria-controls="statistics" role="tab" data-toggle="tab">Statistics</a></li>
+          <li role="presentation" ng-class="{'active': content=='details'}"><a ng-click="changeTabContent('details')" aria-controls="addplant" role="tab" data-toggle="tab">Details</a></li>
+          <li role="presentation" ng-class="{'active': content=='stats'}"><a  ng-click="changeTabContent('stats')" aria-controls="statistics" role="tab" data-toggle="tab">Statistics</a></li>
         </ul>
         <div class="tab-content">
           <form role="tabpanel" class="tab-pane active" id="formTab" ng-show="content == 'details'" name="plantForm" ng-submit="submitPlant()">
@@ -157,8 +157,5 @@
       </div>
     </div>
   </span>
-  <div style ="width: 80%; margin-left: auto; margin-right: auto; margin-top: 10px;" class="alert alert-success message-animation" role="alert" ng-if="success == true">
-    Plant was successfuly submitted!
-  </div>
 </body>
 </html>
