--- a/ez_plant/templates/garden.html
+++ b/ez_plant/templates/garden.html
@@ -23,8 +23,8 @@
       <div class="row">
         <div class="col-sm-6 col-md-3" ng-repeat="plant in plants">
           <div id="[[plant.plant_id]]"class="thumbnail" ng-click="openPlantDetails($index)">
-            <img ng-if="[[plant.img_url]] != ''" ng-src="[[plant.img_url]]" alt="...">
-            <img ng-if="[[plant.img_url]] ==''" ng-src="static/assets/images/default_plant.png" alt="...">
+            <img ng-if="[[plant.image_url]] != ''" ng-src="[[plant.image_url]]" alt="...">
+            <img ng-if="[[plant.image_url]] ==''" ng-src="static/assets/images/default_plant.png" alt="...">
             <div class="caption">
               <h4 class="plantNameTxt marginFix">[[plant.name]]</h4>
               <p class="plantName marginFix">[[plant.plant_type]]</p>
@@ -67,8 +67,8 @@
             <div class="innerFormDiv form-group row">
                 <div class="col-sm-3 col-sm-offset-1">
                   <div class="imgContainer" for="inputId" ng-click="openDialog();">
-                    <img ng-if="[[plant.img_url]]  != ''" ng-src="[[plant.img_url]]"></img>
-                    <img ng-if="[[plant.img_url]]  == ''" ng-src="static/assets/images/default_plant.png"></img>
+                    <img ng-if="[[plant.image_url]]  != ''" ng-src="[[plant.image_url]]"></img>
+                    <img ng-if="[[plant.image_url]]  == ''" ng-src="static/assets/images/default_plant.png"></img>
                     <div class="pencil">
                       <i class="fa fa-pencil-square fa-lg" aria-hidden="true"></i>
                     </div>
